# otus-cpp-hw-02

./: CMakeLists.txt
.github/workflows/: release.yaml
src/: CMakeLists.txt  IpAddressType.h  IpConvertor.cpp  IpConvertor.h  IpFilter.cpp  IpFilter.h  main.cpp
test/: CMakeLists.txt  IpConvertorTests.cpp  IpFilterTests.cpp
